<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7633D6"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:viewBindingIgnore="false">

    <HorizontalScrollView android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageViewMessnger"
            android:layout_marginLeft="5dip"
            style="@style/availableAppsItem"
            app:srcCompat="@drawable/messenger_on" />
        <ImageView
            android:id="@+id/imageViewSnapchat"
            style="@style/availableAppsItem"
            app:srcCompat="@drawable/snapchat_on" />
        <ImageView
            android:id="@+id/imageViewWhatsApp"
            style="@style/availableAppsItem"
            app:srcCompat="@drawable/whatsapp_on" />
        <ImageView
            android:id="@+id/imageViewCall"
            style="@style/availableAppsItem"
            app:srcCompat="@drawable/call_on" />
        <ImageView
            android:id="@+id/imageViewTelegram"
            style="@style/availableAppsItem"
            app:srcCompat="@drawable/telegram_on" />
        <ImageView
            android:id="@+id/imageViewEmail"
            style="@style/availableAppsItem"
            app:srcCompat="@drawable/email_on" />
        <ImageView
            android:id="@+id/imageViewInstagram"
            style="@style/availableAppsItem"
            app:srcCompat="@drawable/instagram_on" />
        <ImageView
            android:id="@+id/imageViewMessages"
            style="@style/availableAppsItem"
            app:srcCompat="@drawable/message_on" />
    </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout android:orientation="vertical" android:layout_margin="12dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:background="@drawable/borders">

        <TextView
            android:id="@+id/textViewAutoText"
            android:layout_width="178dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:text="@string/autosvar"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <LinearLayout android:orientation="horizontal" android:layout_margin="12dip"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:background="@drawable/borders">
            <EditText
                android:id="@+id/editTextAutoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/write_msg"/>
            <ImageButton
                android:id="@+id/buttonSelectPredefinedMessage"
                android:layout_marginLeft="30dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/history" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:orientation="vertical" android:layout_margin="12dip"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="@drawable/borders">

        <TextView
            android:id="@+id/textViewFree"
            android:layout_width="205dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:text="@string/holderfrifratlf"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout android:orientation="horizontal" android:layout_margin="12dip"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:background="@drawable/borders">
            <EditText
                android:id="@+id/editTextFreeFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textCapSentences|time"
                android:hint="@string/fra"
                android:text=""
                />

            <EditText
                android:id="@+id/editTextFreeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textCapSentences|time"
                android:hint="@string/til"
                android:text="" />
        </LinearLayout>

        <LinearLayout android:orientation="horizontal" android:layout_margin="12dip"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:background="@drawable/borders">

            <TextView
                android:id="@+id/textViewFreeAddTime"
                android:layout_width="178dp"
                android:layout_height="30dp"
                android:layout_marginTop="12dp"
                android:text="@string/autosvar"
                android:textColor="#000000" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@android:drawable/ic_input_add" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>